--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/orm": "^2.5",
+        "egeloen/ckeditor-bundle": "^5.0",
+        "exercise/htmlpurifier-bundle": "^0.2.4",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
