Mise en place d'une sécurité sur les routes Admin

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+login_admin_check:
+  path: /admin/login-check
+
+logout_admin:
+  path: /admin/logout
