--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,15 +3,38 @@
 security:
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    #Fournisseur de données d'authentification
     providers:
         in_memory:
-            memory: ~
+            memory:
+              users:
+                admin: {password: 123, roles:['ROLE_ADMIN']}
+                god: {password: 123, roles:['ROLE_SUPER_ADMIN']}
+
+    #Encodage des mots de passe
+    encoders:
+      Symfony\Component\Security\Core\User\User: plaintext
+
+    role_hierarchy:
+      ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        admin:
+          pattern: ^/admin
+          anonymous: false
+          provider: in_memory
+          form_login:
+            login_path: login_admin
+            check_path: login_admin_check
+            default_target_path: /admin
+          logout:
+            path: logout_admin
+            target: homepage
 
         main:
             anonymous: ~
@@ -22,3 +45,6 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+
+    access-control:
+      - {path: ^/admin, roles: ROLE_ADMIN}
