Mise en place d'une sécurité sur les routes Author

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,3 +7,9 @@ login_admin_check:
 
 logout_admin:
   path: /admin/logout
+
+login_author_check:
+  path: /author/login-check
+
+logout_author:
+  path: /author/logout
