--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,10 +10,16 @@ security:
               users:
                 admin: {password: 123, roles:['ROLE_ADMIN']}
                 god: {password: 123, roles:['ROLE_SUPER_ADMIN']}
+        author_provider:
+            entity:
+              class: AppBundle:Author
+              property: email
 
     #Encodage des mots de passe
     encoders:
       Symfony\Component\Security\Core\User\User: plaintext
+      AppBundle\Entity\Author:
+        algorithm: bcrypt
 
     role_hierarchy:
       ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
@@ -34,6 +40,18 @@ security:
             default_target_path: /admin
           logout:
             path: logout_admin
+            target: homepage
+
+        author:
+          pattern: ^/author
+          anonymous: false
+          provider: author_provider
+          form_login:
+            login_path: login_author
+            check_path: login_author_check
+            default_target_path: /author
+          logout:
+            path: logout_author
             target: homepage
 
         main:
